Fixing underlined whitespace after posted on date in the content

--- a/sass/02-base/_04-typography.scss
+++ b/sass/02-base/_04-typography.scss
@@ -196,6 +196,10 @@ a {
 	text-decoration: underline;
 }
 
+.site-content .posted-on a {
+	display: inline-block;
+}
+
 
 /*_______ Captions _______*/
 .wp-caption {
